--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^16.12.0",
     "react-feather": "^2.0.3",
     "react-scripts": "3.4.0",
+    "react-switch": "^5.0.1",
     "theme-ui": "^0.3.1"
   },
   "scripts": {
